--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@openmrs/esm-template-app",
+  "name": "@openmrs/esm-scheduling-app",
   "version": "4.0.0",
   "license": "MPL-2.0",
-  "description": "An OpenMRS seed application for building microfrontends",
-  "browser": "dist/openmrs-esm-template-app.js",
+  "description": "A scheduling application for managing inmunization calendar and other things",
+  "browser": "dist/openmrs-esm-scheduling-app.js",
   "main": "src/index.ts",
   "source": true,
   "scripts": {
@@ -26,7 +26,8 @@
   ],
   "keywords": [
     "openmrs",
-    "microfrontends"
+    "microfrontends",
+    "PeruHCE"
   ],
   "repository": {
     "type": "git",
