Agregar sección de vista clínica y grupo de panel en el dashboard

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@openmrs/esm-error-handling": "^6.0.2",
     "@openmrs/esm-extensions": "^6.0.2",
     "@openmrs/esm-navigation": "^6.0.2",
+    "@openmrs/esm-patient-common-lib": "^9.1.0",
     "@openmrs/esm-react-utils": "^6.0.2",
     "@openmrs/esm-state": "^6.0.2",
     "@openmrs/esm-translations": "^6.0.2",
