--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@openmrs/esm-scheduling-app",
+  "name": "@duvet/esm-scheduling-app",
   "version": "4.0.0",
   "license": "MPL-2.0",
   "description": "A scheduling application for managing inmunization calendar and other things",
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@carbon/react": "^1.74.0",
+    "@hookform/resolvers": "^3.10.0",
     "@openmrs/esm-error-handling": "^6.0.2",
     "@openmrs/esm-extensions": "^6.0.2",
     "@openmrs/esm-navigation": "^6.0.2",
@@ -50,9 +51,11 @@
     "@openmrs/esm-state": "^6.0.2",
     "@openmrs/esm-translations": "^6.0.2",
     "lodash-es": "^4.17.21",
+    "react-hook-form": "^7.54.2",
     "sass": "^1.83.1",
     "single-spa": "^6.0.3",
-    "swr": "^2.3.0"
+    "swr": "^2.3.0",
+    "zod": "^3.24.1"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "*",
@@ -63,28 +66,43 @@
     "rxjs": "6.x"
   },
   "devDependencies": {
-    "@openmrs/esm-framework": "^6.0.3-pre.2627",
+    "@carbon/pictograms-react": "^11.66.0",
+    "@openmrs/esm-framework": "^6.0.4",
+    "@openmrs/esm-patient-common-lib": "next",
     "@openmrs/esm-styleguide": "next",
-    "@playwright/test": "^1.42.1",
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.3.68",
-    "@swc/jest": "^0.2.36",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.6",
+    "@playwright/test": "^1.30.0",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.165",
+    "@swc/jest": "^0.2.21",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/carbon__pictograms-react": "^11",
+    "@types/jest": "^29.5.13",
+    "@types/lodash-es": "^4.17.3",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "css-loader": "^6.8.1",
+    "@types/testing-library__jest-dom": "^5.14.1",
+    "@types/uuid": "^9",
+    "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^5.18.0",
+    "axios": "^1.6.8",
+    "babel-preset-minify": "^0.5.1",
+    "concurrently": "^6.5.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.6.0",
+    "d3-selection": "^3.0.0",
+    "dayjs": "^1.8.36",
     "dotenv": "^16.0.3",
-    "eslint": "^8.50.0",
+    "dotenv-webpack": "^8.1.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -96,18 +114,25 @@
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "lodash": "^4.17.21",
     "openmrs": "^6.0.3-pre.2627",
+    "pinst": "^3.0.0",
     "prettier": "^3.3.3",
+    "pretty-quick": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.14.1",
     "rxjs": "^6.6.7",
+    "sass": "^1.54.3",
     "swc-loader": "^0.2.3",
+    "swr": "^2.2.4",
     "turbo": "^2.2.3",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.10.1"
   },
   "resolutions": {
     "i18next": "21.10.0"
