--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sass": "^1.83.1",
     "single-spa": "^6.0.3",
     "swr": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "peerDependencies": {
