--- a/package.json
+++ b/package.json
@@ -51,8 +51,14 @@
     "@openmrs/esm-react-utils": "^6.0.2",
     "@openmrs/esm-state": "^6.0.2",
     "@openmrs/esm-translations": "^6.0.2",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "lodash-es": "^4.17.21",
+    "react-chartjs-2": "^5.3.0",
     "react-hook-form": "^7.54.2",
+    "react-virtualized-auto-sizer": "^1.0.25",
     "sass": "^1.83.1",
     "single-spa": "^6.0.3",
     "swr": "^2.3.0",
