--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@duvet/esm-peruhce-app",
+  "name": "@duvet05/esm-peruhce-app",
   "version": "4.0.2",
   "license": "MPL-2.0",
   "description": "A peruhce application",
