--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,22 @@
+# Excluir dependencias locales
 node_modules/
-.yarn
+.yarn/
 .yarnrc.yml
-node_modules
+
+# Excluir archivos de configuración y desarrollo
+*.log
+*.map
+*.tgz
+*.lock
+*.config.js
+*.config.ts
+.vscode/
+test/
+e2e/
+coverage/
+docs/
+tmp/
+temp/
+
+# Otros archivos innecesarios
+.DS_Store
