--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__jest-dom": "^5.14.1",
     "@types/uuid": "^9",
-    "@types/webpack-env": "^1.16.0",
+    "@types/webpack-bundle-analyzer": "^4",
+    "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^5.18.0",
     "axios": "^1.6.8",
@@ -116,7 +117,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^8.0.3",
-    "i18next": "^21.10.0",
+    "i18next": "^23.2.8",
     "i18next-parser": "^9.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -139,12 +140,11 @@
     "turbo": "^2.2.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "webpack": "5.88.1",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "^4.10.1"
+    "webpack": "^5.88.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4"
   },
   "resolutions": {
-    "i18next": "21.10.0",
     "webpack": "5.88.1",
     "webpack-cli": "5.1.4"
   },
