--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pucp-gidis-hiisc/esm-sihsalus-app",
-  "version": "1.1.5",
+  "version": "2.0.4-pre.31",
   "description": "Main OpenMRS O3 peruhce microfrontend",
   "keywords": [
     "openmrs",
