--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@pucp-gidis-hiisc/esm-sihsalus-app",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Main openmrs O3 peruhce microfrontend",
   "keywords": [
     "openmrs",
     "microfrontends",
-    "PeruHCE"
+    "PeruHCE",
+    "sihsalus"
   ],
   "homepage": "https://github.com/PROYECTO-SANTACLOTILDE/esm-sihsalus-app#readme",
   "bugs": {
