--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@pucp-gidis-hiisc/esm-growth-chart-app",
-  "version": "1.3.0",
+  "name": "@pucp-gidis-hiisc/esm-sihsalus-app",
+  "version": "1.3.1",
   "description": "Main openmrs O3 peruhce microfrontend",
   "keywords": [
     "openmrs",
-    "microfrontends",
-    "PeruHCE",
-    "sihsalus"
+    "microfrontends"
   ],
   "homepage": "https://github.com/PROYECTO-SANTACLOTILDE/esm-sihsalus-app#readme",
   "bugs": {
