--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pucp-gidis-hiisc/esm-sihsalus-app",
-  "version": "1.3.1",
+  "version": "2.3.1",
   "description": "Main openmrs O3 peruhce microfrontend",
   "keywords": [
     "openmrs",
@@ -34,7 +34,7 @@
     "test-e2e": "playwright test"
   },
   "dependencies": {
-    "@carbon/charts-react": "^1.22.15",
+    "@carbon/charts-react": "^1.22.18",
     "@carbon/react": "^1.74.0",
     "@hookform/resolvers": "^3.10.0",
     "@openmrs/esm-api": "^6.1.0",
@@ -46,6 +46,7 @@
     "@openmrs/esm-feature-flags": "^6.1.0",
     "@openmrs/esm-globals": "^6.1.0",
     "@openmrs/esm-navigation": "^6.0.2",
+    "@openmrs/esm-offline": "^6.1.0",
     "@openmrs/esm-patient-common-lib": "^9.1.0",
     "@openmrs/esm-react-utils": "^6.0.2",
     "@openmrs/esm-state": "^6.0.2",
@@ -99,7 +100,7 @@
     "@types/webpack-bundle-analyzer": "^4",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "axios": "^1.6.8",
     "babel-preset-minify": "^0.5.1",
     "concurrently": "^6.5.1",
@@ -109,14 +110,14 @@
     "dayjs": "^1.8.36",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.1.0",
-    "eslint": "^7.20.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^8.0.3",
-    "i18next": "^23.2.8",
+    "i18next": "^21.10.0",
     "i18next-parser": "^9.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -143,6 +144,13 @@
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   },
+  "files": [
+    "dist",
+    "src",
+    "translations",
+    "package.json",
+    "README.md"
+  ],
   "resolutions": {
     "webpack": "5.88.1",
     "webpack-cli": "5.1.4"
