--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
   },
   "dependencies": {
     "@carbon/charts-react": "^1.22.18",
+    "@carbon/colors": "^11.32.0",
+    "@carbon/layout": "^11.33.0",
     "@carbon/react": "^1.74.0",
+    "@carbon/styles": "^1.80.0",
+    "@carbon/type": "^11.39.0",
     "@hookform/resolvers": "^3.10.0",
     "@openmrs/esm-error-handling": "^6.0.2",
     "@openmrs/esm-extensions": "^6.0.2",
@@ -46,7 +50,9 @@
     "@openmrs/esm-translations": "^6.0.2",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
+    "classnames": "^2.5.1",
     "date-fns": "2.16.1",
+    "dexie": "^4.0.11",
     "lodash-es": "^4.17.21",
     "react-chartjs-2": "^5.3.0",
     "react-hook-form": "^7.54.2",
@@ -67,6 +73,9 @@
   },
   "devDependencies": {
     "@carbon/pictograms-react": "^11.66.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
     "@openmrs/esm-framework": "^6.0.5-pre.2681",
     "@openmrs/esm-patient-common-lib": "next",
     "@openmrs/esm-styleguide": "next",
@@ -90,8 +99,8 @@
     "@types/uuid": "^9",
     "@types/webpack-bundle-analyzer": "^4",
     "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "axios": "^1.6.8",
     "babel-preset-minify": "^0.5.1",
     "concurrently": "^6.5.1",
@@ -101,12 +110,13 @@
     "dayjs": "^1.8.36",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.1.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.25.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "husky": "^8.0.3",
     "i18next": "^21.10.0",
     "i18next-parser": "^9.0.2",
