--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
       "es2016.array.include",
       "es2018",
       "es2020",
-      "es2022",
+      "es2022"
     ],
+    "types": [],
     "resolveJsonModule": true,
     "noEmit": true,
     "target": "esnext"
