--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@carbon/pictograms-react": "^11.76.0",
-    "@openmrs/esm-framework": "6.3.0",
+    "@openmrs/esm-framework": "^6.3.0",
     "@openmrs/esm-patient-common-lib": "next",
     "@openmrs/esm-styleguide": "next",
     "@playwright/test": "^1.42.1",
@@ -104,7 +104,7 @@
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
-    "openmrs": "^6.2.1-pre.2876",
+    "openmrs": "^6.3.0",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
