--- a/package.json
+++ b/package.json
@@ -20,14 +20,8 @@
     "prepare": "husky install",
     "extract-translations": "i18next 'src/**/*.component.tsx' 'src/**/*.workspace.tsx' --config ./tools/i18next-parser.config.js",
     "test-e2e": "playwright test",
-    "deploy": "node scripts/deploy.js",
-    "deploy:next": "node scripts/deploy-next.js",
-    "version:patch": "node scripts/version.js patch",
-    "version:minor": "node scripts/version.js minor",
-    "version:major": "node scripts/version.js major",
     "pre-commit": "lint-staged",
-    "pre-push": "yarn verify && yarn build",
-    "test-setup": "node scripts/test-setup.js"
+    "pre-push": "yarn verify && yarn build"
   },
   "files": [
     "dist",
