--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@carbon/pictograms-react": "^11.76.0",
     "@openmrs/esm-framework": "^6.3.0",
     "@openmrs/esm-patient-common-lib": "next",
-    "@openmrs/esm-styleguide": "next",
+    "@openmrs/esm-styleguide": "^6.3.0",
     "@playwright/test": "^1.42.1",
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.3.68",
